Resolved some spacing issues in PatientInfoPanel, fixed issue where going to / would take you to not the Telesession page

--- a/client/src/css/Telesession.css
+++ b/client/src/css/Telesession.css
@@ -15,6 +15,13 @@
       margin-top: 10px;
     }
   }
+
+  > .right-column {
+     @media (--gt-sm) {
+      margin-left: 10px;
+      max-width: 50%;
+    }
+  }
 }
 
 .overlay {
@@ -113,11 +120,6 @@
   display: flex;
   flex-direction: column;
   flex: 1 0 auto;
-
-  @media (--gt-sm) {
-    margin-left: 10px;
-    max-width: 50%;
-  }
 }
 
 .PatientInfoPanel {
