--- a/client/src/css/panel.css
+++ b/client/src/css/panel.css
@@ -41,9 +41,14 @@
     flex: 1 0 290px;
     display: flex;
     flex-direction: column;
+    max-width: 100%;
 
     ul {
-      padding-right: 10px;
+      padding-left: 17px;
+
+      @media(--gt-xs) {
+        padding-right: 10px;
+      }
 
       > li {
         margin-bottom: 10px;
